import os
import threading
import shutil
import time
import requests
import grpc
from concurrent import futures
from flask import Flask, render_template, request
from cryptography.fernet import Fernet
import torch.distributed as dist
from pyerasure import RSCodec
from prometheus_client import start_http_server, Summary
from apscheduler.schedulers.background import BackgroundScheduler
from datetime import datetime

# 数据加密与解密
def generate_key():
    return Fernet.generate_key()

def encrypt_data(data, key):
    cipher_suite = Fernet(key)
    encrypted_data = cipher_suite.encrypt(data)
    return encrypted_data

def decrypt_data(encrypted_data, key):
    cipher_suite = Fernet(key)
    decrypted_data = cipher_suite.decrypt(encrypted_data)
    return decrypted_data

# 初始化纠删码编码器
def initialize_rscode(n, k):
    rsc = RSCodec(n - k)
    return rsc

# 数据编码与解码 (纠删码)
def encode_data(rsc, data):
    encoded_data = rsc.encode(data)
    return encoded_data

def decode_data(rsc, encoded_data):
    decoded_data = rsc.decode(encoded_data)
    return decoded_data

# 数据备份与恢复
def backup_data(source_dir, backup_dir):
    timestamp = datetime.now().strftime("%Y%m%d-%H%M%S")
    backup_path = os.path.join(backup_dir, f"backup-{timestamp}")
    shutil.copytree(source_dir, backup_path)
    print(f"Data backed up to {backup_path}")

def restore_data(backup_path, target_dir):
    shutil.copytree(backup_path, target_dir, dirs_exist_ok=True)
    print(f"Data restored from {backup_path} to {target_dir}")

# 自动备份
def schedule_backups(source_dir, backup_dir, interval):
    scheduler = BackgroundScheduler()
    scheduler.add_job(backup_data, 'interval', seconds=interval, args=[source_dir, backup_dir])
    scheduler.start()
    print(f"Scheduled backups every {interval} seconds")

# 多线程上传与下载
def upload_file(ip, port, file_path, key, rsc):
    try:
        with open(file_path, 'rb') as f:
            data = f.read()
            encrypted_data = encrypt_data(data, key)
            encoded_data = encode_data(rsc, encrypted_data)
            url = f"http://{ip}:{port}/upload"
            response = requests.post(url, data=encoded_data, verify=True)
            response.raise_for_status()
            print(f"Successfully uploaded {file_path}")
    except requests.exceptions.RequestException as e:
        print(f"Error uploading file {file_path}: {e}")

def download_file(ip, port, file_path, key, rsc):
    try:
        url = f"http://{ip}:{port}/download"
        response = requests.get(url, stream=True, verify=True)
        response.raise_for_status()
        encoded_data = response.content
        encrypted_data = decode_data(rsc, encoded_data)
        data = decrypt_data(encrypted_data, key)
        with open(file_path, 'wb') as f:
            f.write(data)
        print(f"Successfully downloaded {file_path}")
    except requests.exceptions.RequestException as e:
        print(f"Error downloading file {file_path}: {e}")

def multi_thread_download(ips, port, download_dir, key, rsc):
    threads = []
    for ip in ips:
        file_name = f"file_from_{ip}.txt"
        file_path = os.path.join(download_dir, file_name)
        t = threading.Thread(target=download_file, args=(ip, port, file_path, key, rsc))
        t.start()
        threads.append(t)

    for t in threads:
        t.join()

def multi_thread_upload(ip, port, file_paths, key, rsc):
    threads = []
    for file_path in file_paths:
        t = threading.Thread(target=upload_file, args=(ip, port, file_path, key, rsc))
        t.start()
        threads.append(t)

    for t in threads:
        t.join()

# gRPC 服务端实现
class DataExchangeServicer(protocol_buffer_pb2_grpc.DataExchangeServicer):
    def SendData(self, request, context):
        data = request.data
        return protocol_buffer_pb2.Response(message="Data received")

    def ReceiveData(self, request, context):
        while True:
            yield protocol_buffer_pb2.DataChunk(data=b"some data")

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    protocol_buffer_pb2_grpc.add_DataExchangeServicer_to_server(DataExchangeServicer(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()

def run_client():
    channel = grpc.insecure_channel('localhost:50051')
    stub = protocol_buffer_pb2_grpc.DataExchangeStub(channel)
    response = stub.SendData(protocol_buffer_pb2.DataChunk(data=b"some data"))
    print(f"Client received: {response.message}")

    for data_chunk in stub.ReceiveData(protocol_buffer_pb2.Empty()):
        print(f"Received data: {data_chunk.data}")

# RDMA 传输实现
def setup_rdma():
    ctx = Context(name='mlx5_0')
    pd = PD(ctx)
    cq = CQ(ctx, 10)
    qp = QP(pd, cq, cq)
    
    server_id = CM_ID('server')
    client_id = CM_ID('client')
    
    server_id.listen('0.0.0.0', 18515)
    client_id.connect('server_ip', 18515)
    
    return server_id, client_id, pd, qp

def rdma_send(client_id, qp, data):
    sge = SGE(data, len(data))
    wr = SendWR([sge], opcode=IBV_SEND_SIGNALED)
    qp.post_send(wr)

def rdma_receive(server_id, pd):
    mr = MR(pd, 1024)
    wr = server_id.get_recv_wr()
    wr.wr_id.mr = mr
    server_id.get_send_comp()

# 分布式计算数据交换
def compressed_allreduce(tensor, world_size):
    tensor_to_send = tensor / world_size
    dist.all_reduce(tensor_to_send, op=dist.ReduceOp.SUM)
    return tensor_to_send

# 高级监控和管理
REQUEST_TIME = Summary('request_processing_seconds', 'Time spent processing request')

# 数据监控
def start_prometheus_server():
    start_http_server(8000)
    while True:
        time.sleep(1)

# 前端接口
app = Flask(__name__)

@app.route('/')
def index():
    return render_template('index.html')

@app.route('/upload', methods=['POST'])
def upload():
    file = request.files['file']
    # 上传文件到存储系统
    return "File uploaded successfully"

@app.route('/download', methods=['GET'])
def download():
    file_name = request.args.get('file_name')
    # 从存储系统下载文件
    return "File downloaded successfully"

# 示例用法
if __name__ == "__main__":
    # 数据加密与解密
    key = generate_key()
    rsc = initialize_rscode(n=10, k=8)  # 例如 n=10, k=8 表示 2 个冗余码

    data = b"Hello, World!"
    encrypted_data = encrypt_data(data, key)
    encoded_data = encode_data(rsc, encrypted_data)
    decoded_data = decode_data(rsc, encoded_data)
    decrypted_data = decrypt_data(decoded_data, key)
    print(f"Encrypted Data: {encrypted_data}")
    print(f"Encoded Data: {encoded_data}")
    print(f"Decoded Data: {decoded_data}")
    print(f"Decrypted Data: {decrypted_data}")

    # 数据备份与恢复
    source_dir = "/path/to/data"
